--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
                         linkedin
                     </a>
                 </span>
+
+                <span>
+                    
+                    <a href="https://github.com/olucasokarin" target="_blank" rel="noopener noreferrer">
+                        github
+                    </a>
+                </span>
             </div>
 
             <img src="assets/profile.jpg" alt="profile">
