--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     </p>
             </div>
 
-            <img src="assets/wheather.jpg" alt="onotes">
+            <img src="assets/wheather.jpg" alt="wheater">
         </div>
         
       </div>
