--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="project_container">
             <div class="project_content">
                 <span>
-                    oNotes
+                    Wheater
                 </span>
 
 
