--- a/index.html
+++ b/index.html
@@ -141,11 +141,23 @@
                 </span>
 
 
-                    <p>Projeto web e mobile de notas, desenvolvido com a biblioteca react para web
+                    <p>Projeto web de notas, desenvolvido com a biblioteca react para web
                         e react native para mobile.
                         Possui também um backend feito em node com o framework express 
                         para comunicação http. Integrando ao banco de dados postgre.
+                        O projeto consite em um site de anotações/notas organizado com categorias.
                     </p>
+
+                    <div class="button_container">
+                        <a href="https://github.com/olucasokarin/onotes-back" target="_blank">
+                            <button >GitHub Backend</button>
+                        </a>
+    
+                        <a href="https://github.com/olucasokarin/onotes-web" target="_blank">
+                            <button >GitHub Frontend</button>
+                        </a>
+    
+                    </div>
             </div>
 
             <img src="assets/onotes.png" alt="onotes">
