added update artisave page

--- a/artisave/index.html
+++ b/artisave/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestão de Estoque | Organize seu Espaço</title>
+    <!-- Favicon -->
+    <link rel="icon" href="https://placehold.co/16x16/6d28d9/ffffff?text=AS" type="image/png">
+    <title>Artisave | Organize seu Espaço</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter -->
@@ -185,7 +187,7 @@
                     <p class="text-slate-600">Evite a compra excessiva de materiais e o desperdício, otimizando seus recursos.</p>
                 </div>
                 <!-- Benefit 6 -->
-                <div class="card p-8 text-center">
+                <div class="card p-8 text-center hover:-translate-y-1 transition-all duration-300">
                     <div class="text-violet-600 mb-4">
                         <svg class="w-16 h-16 mx-auto" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 .895-3 2s1.343 2-3 2 3-.895 3-2-1.343-2-3-2z"></path></svg>
                     </div>
@@ -616,9 +618,8 @@
         <div class="container mx-auto text-center">
             <p class="mb-4">&copy; 2025 Artisave. Todos os direitos reservados.</p>
             <div class="flex justify-center space-x-6">
-                <a href="#" class="text-slate-400 hover:text-white">Termos de Serviço</a>
-                <a href="#" class="text-slate-400 hover:text-white">Política de Privacidade</a>
-                <a href="#" class="text-slate-400 hover:text-white">Contato</a>
+                <a href="termos-uso.html" class="text-slate-400 hover:text-white">Termos de Uso</a>
+                <a href="politica-privacidade.html" class="text-slate-400 hover:text-white">Política de Privacidade</a>
             </div>
         </div>
     </footer>
