--- a/artisave/index.html
+++ b/artisave/index.html
@@ -120,10 +120,21 @@
                     <li><a href="#contato" class="text-slate-600 hover:text-violet-700 font-medium">Contato</a></li>
                 </ul>
             </nav>
-            <button class="md:hidden text-slate-600 focus:outline-none">
+             <!-- Mobile Menu Button -->
+            <button id="mobile-menu-button" class="md:hidden text-slate-600 focus:outline-none" onclick="toggleMobileMenu()">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
             </button>
         </div>
+      <!-- Mobile Menu Links (visible only when toggled) -->
+      <div id="mobile-menu-links" class="md:hidden hidden bg-white shadow-md py-2">
+          <ul class="flex flex-col items-center space-y-2">
+              <li><a href="#beneficios" class="block py-2 px-4 text-slate-600 hover:text-violet-700 font-medium w-full text-center">Benefícios</a></li>
+              <li><a href="#como-funciona" class="block py-2 px-4 text-slate-600 hover:text-violet-700 font-medium w-full text-center">Como Funciona</a></li>
+              <li><a href="#planos" class="block py-2 px-4 text-slate-600 hover:text-violet-700 font-medium w-full text-center">Planos</a></li>
+              <li><a href="#seja-o-primeiro" class="block py-2 px-4 text-slate-600 hover:text-violet-700 font-medium w-full text-center">Pré-Lançamento</a></li>
+              <li><a href="#contato" class="block py-2 px-4 text-slate-600 hover:text-violet-700 font-medium w-full text-center">Contato</a></li>
+          </ul>
+      </div>
     </header>
 
     <!-- Hero Section -->
@@ -623,5 +634,13 @@
             </div>
         </div>
     </footer>
+
+    <script>
+        // Função para alternar a visibilidade do menu mobile
+        function toggleMobileMenu() {
+            const mobileMenuLinks = document.getElementById('mobile-menu-links');
+            mobileMenuLinks.classList.toggle('hidden'); // Alterna a classe 'hidden'
+        }
+    </script>
 </body>
 </html>
